--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minima:
 
   # generate social links in footer
   social_links:
-    #twitter: jekyllrb
+    twitter: BorisAKnyazev
     github:  bknyaz
     # rss: rss
     # dribbble: jekyll
