--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Boris Knyazev's blog
+title: Boris Knyazev
 author: Boris Knyazev
 email: bknyazev [at] uoguelph [dot] ca
 description: Powered by Jekyll
