update open source

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Boris Knyazev
 author: Boris Knyazev
 email: bknyazev [at] uoguelph [dot] ca
-description: Powered by Jekyll
+description: Boris Knyazev's homapage (Powered by Jekyll)
 #description: > # this means to ignore newlines until "twitter_username:"
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
@@ -24,7 +24,7 @@ minima:
     # flickr:   jekyll
     # instagram: jekyll
     linkedin: boris-knyazev-39690948
-    medium: BorisAKnyazev
+    # medium: BorisAKnyazev
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
