--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Boris Knyazev
 author: Boris Knyazev
 email: bknyazev [at] uoguelph [dot] ca
-description: Boris Knyazev's homapage (Powered by Jekyll)
+description: Boris Knyazev's homepage (Powered by Jekyll)
 #description: > # this means to ignore newlines until "twitter_username:"
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
