--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -12,7 +12,7 @@
 # cv_pdf: /assets/pdf/BorisKnyazev_CV.pdf # path to your CV PDF file
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: borknyaz@gmail.com # your email address
+email: boris.knyazev@umontreal.ca # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 # github_username: bknyaz # your GitHub user name
