--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 #blog_name: al-folio # blog_name will be displayed in your blog page
 #blog_description: a simple whitespace theme for academics
-#permalink: /blog/:year/:title/
-#lsi: false # produce an index for related posts
+permalink: /blog/:year/:title/
+lsi: false # produce an index for related posts
 
 # Pagination
 pagination:
@@ -124,6 +124,7 @@ giscus:
 external_sources:
   - name: medium.com
     rss_url: https://medium.com/@BorisAKnyazev/feed
+    categories: [medium]
 
 # -----------------------------------------------------------------------------
 # Newsletter
@@ -251,8 +252,8 @@ jekyll-archives:
   books:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
-#display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-#display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["llm", "merging", "moe", "empirical-study", "research"] # these tags will be displayed on the front page of your blog
+display_categories: ["medium"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
